# hakan-accounting-mcp

./: .gitignore  CLAUDE.md  README.md  SECURITY_ANNOTATIONS.md  pyproject.toml  run_server.py  start_server.sh
.claude/commands/: get_repo_context.md
ai/docs/: best-practices.md
ai/hist/: diary.mdx
interfaces/: balansrakning.html  resultatrakning.html
specs/: documentation-system-implementation-v1.md  expense-tracking-implementation.mdx  kontoplan.md  mcp-invoice-server-plan.md  payment-reminder-implementation-brief.md  unified-accounting-system-implementation.md  voucher-annotation.md
src/: __init__.py  accounting_models.py  models.py  server.py
src/database/: __init__.py  accounting_db.py  base.py  database.py  expense_db.py  invoice_db.py
src/models/: __init__.py  accounting_models.py  expense_models.py  invoice_models.py
src/modules/accounting/: __init__.py  account_service.py  accounting_service.py  idempotency_service.py  journal_service.py  secure_voucher_service.py  voucher_annotation_service.py  voucher_service.py
src/modules/documentation/: __init__.py  documentation_service.py  tool_documentation.py
src/modules/expenses/: __init__.py  expense_service.py  receipt_processor.py
src/modules/invoicing/: __init__.py  invoice_service.py  payment_reminders.py  pdf_generator.py  reminder_service.py
src/modules/reconciliation/: __init__.py  bank_reconciliation.py
src/modules/reporting/: __init__.py  financial_statements.py  vat_reporting.py
src/modules/security/: __init__.py  totp_service.py
src/templates/: __init__.py  all_templates.py
src/totp_setup/: README.md  setup_totp.py  verify_totp.py
tests/: README.md  conftest.py  test_vat_rounding.py
